dataset1235/2025-2/2318198438/users/1240871306/executions/1897677159_2819779400.log
== RUN (2025-08-27 04:20:18)
-- CODE: 
quantidade = int(input("5.0:"))
valor da unidade = float(input("100.0:"))
frete =  float(input("40.0:"))
total = print(5 * 100 + 40)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:19:53)
-- CODE: 
quantidade = int(input("5.0:"))
valor da unidade = float(input("100.0:"))
frete =  float(input("40.0:"))
total = 5 * 100 + 40
print(total )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:15:38)
-- CODE: 
quantidade = int(input("5:"))
valor da unidade = float(input("100.0:"))
frete =  float(input("40:"))

total = 5 * 100 + 40
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:19:02)
-- CODE: 
quantidade = int(input("5.0:"))
valor da unidade = float(input("100.0:"))
frete =  float(input("40.0:"))
total = 5 * 100 + 40
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 04:11:26)
-- CODE: 
quantidade = int(input("5:"))
valor da unidade = float(input("100.0:"))
frete =  float(input("40:"))

total = 5 * 100 + 40
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:16:49)
-- CODE: 
quantidade = int(input("5.0:"))
valor da unidade = float(input("100.0:"))
frete =  float(input("40.0:"))

total = 5 * 100 + 40
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:20:34)
-- CODE: 
quantidade = int(input("5.0:"))
valor da unidade = float(input("100.0:"))
frete =  float(input("40.0:"))
total = print(5 * 100 + 40)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 04:07:58)
-- CODE: 
quantidade = int(input("15"))
valor da unidade = float(input("15"))
frete =  float(input("20:"))

total = 15 * 15 + 20
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15"))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 04:11:08)
-- CODE: 
quantidade = int(input("5:"))
valor da unidade = float(input("100.0:"))
frete =  float(input("40:"))

total = 15 * 15 + 20
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 04:09:40)
-- CODE: 
quantidade = int(input("159:"))
valor da unidade = float(input("15:"))
frete =  float(input("20:"))

total = 15 * 15 + 20
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 04:19:03)
-- CODE: 
quantidade = int(input("5.0:"))
valor da unidade = float(input("100.0:"))
frete =  float(input("40.0:"))
total = 5 * 100 + 40
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 04:08:40)
-- CODE: 
quantidade = int(input("15:"))
valor da unidade = float(input("15:"))
frete =  float(input("20:"))

total = 15 * 15 + 20
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 04:19:03)
-- CODE: 
quantidade = int(input("5.0:"))
valor da unidade = float(input("100.0:"))
frete =  float(input("40.0:"))
total = 5 * 100 + 40
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:11:54)
-- CODE: 
quantidade = int(input("5.0:"))
valor da unidade = float(input("100.0:"))
frete =  float(input("40:"))

total = 5 * 100 + 40
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:11:05)
-- CODE: 
quantidade = int(input("5:"))
valor da unidade = float(input("100.0:"))
frete =  float(input("40:"))

total = 15 * 15 + 20
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:08:39)
-- CODE: 
quantidade = int(input("15:"))
valor da unidade = float(input("15:"))
frete =  float(input("20:"))

total = 15 * 15 + 20
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 04:07:55)
-- CODE: 
quantidade = int(input("15"))
valor da unidade = float(input("15"))
frete =  float(input("20:"))

total = 15 * 15 + 20
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15"))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 04:15:39)
-- CODE: 
quantidade = int(input("5:"))
valor da unidade = float(input("100.0:"))
frete =  float(input("40:"))

total = 5 * 100 + 40
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:11:24)
-- CODE: 
quantidade = int(input("5:"))
valor da unidade = float(input("100.0:"))
frete =  float(input("40:"))

total = 5 * 100 + 40
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:09:42)
-- CODE: 
quantidade = int(input("159:"))
valor da unidade = float(input("15:"))
frete =  float(input("20:"))

total = 15 * 15 + 20
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:08:44)
-- CODE: 
quantidade = int(input("15:"))
valor da unidade = float(input("15:"))
frete =  float(input("20:"))

total = 15 * 15 + 20
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 04:20:19)
-- CODE: 
quantidade = int(input("5.0:"))
valor da unidade = float(input("100.0:"))
frete =  float(input("40.0:"))
total = print(5 * 100 + 40)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 04:11:06)
-- CODE: 
quantidade = int(input("5:"))
valor da unidade = float(input("100.0:"))
frete =  float(input("40:"))

total = 15 * 15 + 20
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:07:53)
-- CODE: 
quantidade = int(input("15"))
valor da unidade = float(input("15"))
frete =  float(input("20:"))

total = 15 * 15 + 20
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15"))
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 04:19:53)
-- CODE: 
quantidade = int(input("5.0:"))
valor da unidade = float(input("100.0:"))
frete =  float(input("40.0:"))
total = 5 * 100 + 40
print(total )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 04:19:54)
-- CODE: 
quantidade = int(input("5.0:"))
valor da unidade = float(input("100.0:"))
frete =  float(input("40.0:"))
total = 5 * 100 + 40
print(total )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 04:11:27)
-- CODE: 
quantidade = int(input("5:"))
valor da unidade = float(input("100.0:"))
frete =  float(input("40:"))

total = 5 * 100 + 40
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 04:20:20)
-- CODE: 
quantidade = int(input("5.0:"))
valor da unidade = float(input("100.0:"))
frete =  float(input("40.0:"))
total = print(5 * 100 + 40)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 04:16:50)
-- CODE: 
quantidade = int(input("5.0:"))
valor da unidade = float(input("100.0:"))
frete =  float(input("40.0:"))

total = 5 * 100 + 40
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 04:09:43)
-- CODE: 
quantidade = int(input("159:"))
valor da unidade = float(input("15:"))
frete =  float(input("20:"))

total = 15 * 15 + 20
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 04:08:41)
-- CODE: 
quantidade = int(input("15:"))
valor da unidade = float(input("15:"))
frete =  float(input("20:"))

total = 15 * 15 + 20
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("15:"))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 04:11:56)
-- CODE: 
quantidade = int(input("5.0:"))
valor da unidade = float(input("100.0:"))
frete =  float(input("40:"))

total = 5 * 100 + 40
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    valor da unidade = float(input("100.0:"))
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
